--- a/debian/po/mr.po
+++ b/debian/po/mr.po
@@ -13,19 +13,20 @@
 # Sampada Nakhare, 2007.
 # Sandeep Shedmake <sshedmak@redhat.com>, 2009, 2010.
 # localuser <sampadanakhare@gmail.com>, 2015.
+# Nayan Nakhare <nayannakhare@rediffmail.com>, 2018.
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-05-04 09:32+0530\n"
-"Last-Translator: Sampada <sampadanakhare@gmail.com>\n"
+"PO-Revision-Date: 2018-10-07 18:30+0000\n"
+"Last-Translator: Nayan Nakhare <nayannakhare@rediffmail.com>\n"
 "Language-Team: CDAC_DI\n"
 "Language: mr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. Type: text
 #. Description
@@ -37,7 +38,7 @@ msgstr ""
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr "btrfs"
+msgstr "बीटीआरएफएस"
 
 #. Type: text
 #. Description
@@ -52,7 +53,7 @@ msgstr "btrfs जर्नलिंग फाइल प्रणाली"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr "वेगळे /boot नसल्यास btrfs मूल फाइल प्रणालीला पाठबळ नाही."
+msgstr "वेगळे /boot नसल्यास btrfs मूल फाइल प्रणालीला पाठबळ नाही"
 
 #. Type: error
 #. Description
@@ -69,18 +70,17 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
-msgstr "आपण एक्सटी३ सारखे अन्य फाइल प्रणाली असलेले लहानसे /boot विभाजन वापरले पाहिजे."
+msgstr "आपण ईएक्सटी4 सारखे अन्य फाइल प्रणाली असलेले लहानसे /boot विभाजन वापरले पाहिजे."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
 msgid "btrfs file system not supported for /boot"
-msgstr "/boot  करीता btrfs फाइल प्रणालीला पाठबळ नाही. "
+msgstr "/boot करीता btrfs फाइल प्रणालीला पाठबळ नाही"
 
 #. Type: error
 #. Description
@@ -97,7 +97,6 @@ msgstr ""
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "आपण एक्सटी३ सारखी अन्य फाइल प्रणाली /boot विभाजनाकरिता वापरली पाहिजे."
+msgstr "आपण ईएक्सटी4 सारखी अन्य फाइल प्रणाली /boot विभाजनाकरिता वापरली पाहिजे."
