--- a/debian/po/fa.po
+++ b/debian/po/fa.po
@@ -6,7 +6,7 @@
 # Persian messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# , 2005.
+# Nima Sahraneshin <unix.nima@gmail.com>, 2018.
 #
 # Translations from iso-codes:
 #   Alastair McKinstry - further translations from ICU-3.0
@@ -24,13 +24,14 @@ msgstr ""
 "Project-Id-Version: fa\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2012-10-20 19:56+0330\n"
-"Last-Translator: Behrad Eslamifar <behrad_es@yahoo.com>\n"
+"PO-Revision-Date: 2019-01-01 17:49+0000\n"
+"Last-Translator: nima sahraneshin <unix.nima@gmail.com>\n"
 "Language-Team: Debian-l10n-persian <debian-l10n-persian@lists.debian.org>\n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. Type: text
 #. Description
@@ -42,7 +43,7 @@ msgstr ""
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr "btrfs"
+msgstr "بی‌تی‌آر‌اف‌اس"
 
 #. Type: text
 #. Description
