--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -21,15 +21,16 @@
 # Meni Livne <livne@kde.org>, 2000.
 # Meital Bourvine <meitalbourvine@gmail.com>, 2007.
 # Lior Kaplan <kaplan@debian.org>, 2004-2007, 2008, 2010, 2011, 2015, 2017.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2018, 2019.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer_packages_po_sublevel1_he\n"
+"Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2017-09-02 21:07+0300\n"
-"Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
-"Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
+"PO-Revision-Date: 2019-02-11 10:09+0000\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
+"Language-Team: Hebrew (https://www.transifex.com/yaron/teams/79473/he/)\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,8 +72,8 @@ msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"שורש מערכת הקבצים שלך היא מערכת הקבצים btrfs. היא אינה נתמכת על ידי מנהל "
-"האתחול שהוגדר כברירת מחדל על ידי תוכנית ההתקנה."
+"שורש מערכת הקבצים שלך היא מערכת קבצים מסוג btrfs. היא אינה נתמכת על ידי מנהל "
+"האתחול שהוגדר כבררת מחדל על ידי תכנית ההתקנה."
 
 #. Type: error
 #. Description
