--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -9,21 +9,18 @@
 # Jean Christophe André <progfou@gmail.com>
 # Vũ Quang Trung <vu.quang.trung@auf.org>
 # Trịnh Minh Thành <tmthanh@yahoo.com>
+# Nguyễn Hùng Vũ <vuhung16@bigfoot.com>, 2001.
 # Clytie Siddall <clytie@riverland.net.au>, 2005-2010
 # Hai-Nam Nguyen <hainam@jcisio.com>, 2012
-#
-# Translations from iso-codes:
-# Clytie Siddall <clytie@riverland.net.au>, 2005-2009.
-# Copyright © 2009 Free Software Foundation, Inc.
-# Nguyễn Hùng Vũ <vuhung16@bigfoot.com>, 2001.
+# Trần Ngọc Quân <vnwildman@gmail.com>, 2018, 2019.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer Level 1\n"
+"Project-Id-Version: debian-installer sublevel1\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-03-05 11:15+0100\n"
-"Last-Translator: Hai-Nam Nguyen <hainam@jcisio.com>\n"
+"PO-Revision-Date: 2019-02-27 14:34+0700\n"
+"Last-Translator: Trần Ngọc Quân <vnwildman@gmail.com>\n"
 "Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
 "Language: vi\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +54,7 @@ msgstr "Hệ thống tập tin ghi nhật ký btrfs"
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
 msgstr ""
-"Không hỗ trợ hệ thống tập tin gốc btrfs mà không có phân vùng « /boot » riêng"
+"Không hỗ trợ hệ thống tập tin gốc btrfs mà không có phân vùng “/boot” riêng"
 
 #. Type: error
 #. Description
@@ -68,27 +65,26 @@ msgid ""
 "boot loader used by default by this installer."
 msgstr ""
 "Hệ thống tập tin gốc của bạn là một hệ thống tập tin kiểu btrfs. Nó không "
-"phải được hỗ trợ bởi bộ nạp khởi động dùng theo mặc định bởi trình cài đặt "
+"phải được hỗ trợ bởi bộ tải khởi động dùng theo mặc định bởi trình cài đặt "
 "này."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"Bạn nên sử dụng một phân vùng « /boot » nhỏ với hệ thống tập tin khác, v.d. "
-"ext3."
+"Bạn nên sử dụng một phân vùng “/boot” nhỏ với hệ thống tập tin khác, v.d. "
+"ext4."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
 msgid "btrfs file system not supported for /boot"
-msgstr "Không hỗ trợ hệ thống tập tin btrfs cho « /boot »"
+msgstr "Không hỗ trợ hệ thống tập tin btrfs cho “/boot”"
 
 #. Type: error
 #. Description
@@ -98,17 +94,15 @@ msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Bạn đã lắp một hệ thống tập tin kiểu btrfs như là « /boot ». Trương hợp này "
-"không phải được hỗ trợ bởi bộ nạp khởi động dùng theo mặc định bởi trình cài "
+"Bạn đã gắn một hệ thống tập tin kiểu btrfs như là “/boot”. Trương hợp này "
+"không phải được hỗ trợ bởi bộ tải khởi động dùng theo mặc định bởi trình cài "
 "đặt này."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Bạn nên sử dụng một hệ thống tập tin khác, v.d. ext3, cho phân vùng « /boot "
-"»."
+"Bạn nên sử dụng một hệ thống tập tin khác, v.d. ext4, cho phân vùng “/boot”."
