--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -23,15 +23,15 @@ msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2017-04-01 23:55+0200\n"
-"Last-Translator: Valentin Vidic <Valentin.Vidic@CARNet.hr>\n"
+"PO-Revision-Date: 2019-07-04 17:02+0000\n"
+"Last-Translator: gogogogi <trebelnik2@gmail.com>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #. Type: text
 #. Description
@@ -58,7 +58,8 @@ msgstr "btrfs dnevnički datotečni sustav"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr "btrfs korijenski datotečni sustav nije podržan bez odvojenog /boot"
+msgstr ""
+"btrfs korijenski datotečni sustav nije podržan bez odvojene /boot particije"
 
 #. Type: error
 #. Description
@@ -68,8 +69,8 @@ msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Vaš korijenski datotečni sustav je btrfs. To će vjerojatno izazvati probleme "
-"s boot učitavačem koji je zadan za ovu instalaciju."
+"Vaš korijenski datotečni sustav je btrfs. To nije podržano od strane učitača "
+"pokretanja koji je zadan ovim instalcijskim programom."
 
 #. Type: error
 #. Description
@@ -87,7 +88,7 @@ msgstr ""
 #. :sl2:
 #: ../partman-btrfs.templates:5001
 msgid "btrfs file system not supported for /boot"
-msgstr "btrfs nije podržani datotečni sustav za /boot"
+msgstr "btrfs datotečni sustav ne podržava /boot"
 
 #. Type: error
 #. Description
@@ -97,8 +98,8 @@ msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Montirali ste btrfs datotečni sustav kao /boot. To nije podržano u boot "
-"učitavaču koji je zadan za ovu instalaciju."
+"Montirali ste btrfs datotečni sustav kao /boot. To nije podržano od strane "
+"učitača pokretanja koji je zadan ovim instalcijskim programom."
 
 #. Type: error
 #. Description
@@ -107,5 +108,5 @@ msgstr ""
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
 msgstr ""
-"Trebali biste koristiti drugi datotečni sustav, npr. ext4, za /boot "
+"Trebali biste koristiti drugi datotečni sustav, poput ext4, za /boot "
 "particiju."
